--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html_template",
+  "name": "ardall",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,7 @@
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.2",
@@ -35,5 +36,13 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1"
   },
-  "description": "My template for web."
+  "description": "My template for web.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/flashgrinder/ardall.git"
+  },
+  "bugs": {
+    "url": "https://github.com/flashgrinder/ardall/issues"
+  },
+  "homepage": "https://github.com/flashgrinder/ardall#readme"
 }
