Сверстал шапку, слайдер, сайдбар и блок с контентом

--- a/app/.jshintrc
+++ b/app/.jshintrc
@@ -10,5 +10,10 @@
 	"browser": true,
 	"devel": true,
 	"jquery": true,
-	"esversion": 6
+	"esversion": 6,
+	"globals": {
+		"Swiper": false,
+		"$": false,
+		"jQuery": false
+	}
 }
